--- a/.github/workflows/sync-issues.yml
+++ b/.github/workflows/sync-issues.yml
@@ -4,10 +4,21 @@ on:
   workflow_dispatch: # 手动按钮
   schedule:
     - cron: '0 2 * * *' # 每天凌晨 2 点同步一次，UTC 时间 → 对应法国是 4 点左右
+  issues:
+    types: [opened, edited, labeled, unlabeled] # 优化：移除 closed, reopened 减少不必要触发
 
 jobs:
   sync:
     runs-on: ubuntu-latest
+    # 只在涉及 Public 标签的 Issues 时运行，或者是定时/手动触发
+    if: >
+      github.event_name == 'schedule' || 
+      github.event_name == 'workflow_dispatch' ||
+      (github.event_name == 'issues' && (
+        contains(github.event.issue.labels.*.name, 'Public') ||
+        github.event.action == 'labeled' ||
+        github.event.action == 'unlabeled'
+      ))
     permissions:
       contents: write  # 允许写入仓库内容
       issues: read     # 允许读取 issues
